Closed Bug 1789781 Opened 2 years ago Closed 2 years ago

Intermittent /css/css-overflow/webkit-line-clamp-023.html | single tracking bug

Categories

(Core :: Layout: Scrolling and Overflow, defect, P3)

defect

Tracking

()

RESOLVED FIXED
106 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox105 --- unaffected
firefox106 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: emilio)

References

(Regression)

Details

(Keywords: intermittent-failure, intermittent-testcase, regression)

Attachments

(1 file)

Filed by: imoraru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=389818394&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Yu2nT6K4R_KI5IFu1UsS-w/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Yu2nT6K4R_KI5IFu1UsS-w/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1


[task 2022-09-08T05:22:39.875Z] 05:22:39     INFO - TEST-START | /css/css-overflow/webkit-line-clamp-023.html
[task 2022-09-08T05:22:39.882Z] 05:22:39     INFO - PID 14822 | [Parent 14822, Compositor] WARNING: IPC Connection Error: [Parent][PCompositorManagerParent] RunMessage(msgname=PCompositorBridge::Msg___delete__) Channel closing: too late to send/recv, messages will be lost: file /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1883
[task 2022-09-08T05:22:39.883Z] 05:22:39     INFO - PID 14822 | [Parent 14822, Compositor] WARNING: IPC Connection Error: [Parent][PImageBridgeParent] RunMessage(msgname=PImageBridge::Msg_WillClose) Channel closing: too late to send/recv, messages will be lost: file /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1883
[task 2022-09-08T05:22:39.885Z] 05:22:39     INFO - PID 13716 | 1662614559883	Marionette	INFO	Testing http://web-platform.test:8000/css/css-overflow/webkit-line-clamp-023.html == http://web-platform.test:8000/css/css-overflow/reference/webkit-line-clamp-023-ref.html
[task 2022-09-08T05:22:39.932Z] 05:22:39     INFO - PID 14822 | [Parent 14822, Compositor] WARNING: IPC Connection Error: [Parent][PCompositorManagerParent] RunMessage(msgname=PCompositorBridge::Msg___delete__) Channel closing: too late to send/recv, messages will be lost: file /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1883
[task 2022-09-08T05:22:39.932Z] 05:22:39     INFO - PID 14822 | [Parent 14822, Compositor] WARNING: IPC Connection Error: [Parent][PImageBridgeParent] RunMessage(msgname=PImageBridge::Msg_WillClose) Channel closing: too late to send/recv, messages will be lost: file /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1883
[task 2022-09-08T05:22:39.932Z] 05:22:39     INFO - PID 14822 | [Parent 14822, Socket Thread] WARNING: cannot post event if not initialized: file /builds/worker/checkouts/gecko/netwerk/protocol/http/nsHttpConnectionMgr.cpp:197
[task 2022-09-08T05:22:40.023Z] 05:22:40     INFO - PID 14822 | [2022-09-08T05:22:40Z WARN  xulstore::persist] tried to remove key that isn't in the store
[task 2022-09-08T05:22:40.024Z] 05:22:40     INFO - PID 14822 | [2022-09-08T05:22:40Z WARN  xulstore::persist] tried to remove key that isn't in the store
[task 2022-09-08T05:22:40.034Z] 05:22:40     INFO - PID 14822 | [Child 14925, Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3359
[task 2022-09-08T05:22:40.038Z] 05:22:40     INFO - PID 14822 | [Child 14925, Main Thread] WARNING: NS_ENSURE_TRUE(InitStaticMembers()) failed: file /builds/worker/workspace/obj-build/dist/include/mozilla/Preferences.h:129
[task 2022-09-08T05:22:40.045Z] 05:22:40     INFO - PID 14822 | [Child 14925, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4604
[task 2022-09-08T05:22:40.101Z] 05:22:40     INFO - PID 14822 | [Child 14951, Main Thread] WARNING: Wrong inner/outer window combination!: file /builds/worker/checkouts/gecko/dom/base/Document.cpp:7671
[task 2022-09-08T05:22:40.103Z] 05:22:40     INFO - PID 14822 | [Child 14951, Main Thread] WARNING: Wrong inner/outer window combination!: file /builds/worker/checkouts/gecko/dom/base/Document.cpp:7671
[task 2022-09-08T05:22:40.106Z] 05:22:40     INFO - PID 14822 | [Child 14951, Main Thread] WARNING: Wrong inner/outer window combination!: file /builds/worker/checkouts/gecko/dom/base/Document.cpp:7671
[task 2022-09-08T05:22:40.107Z] 05:22:40     INFO - PID 14822 | [Child 14951, Main Thread] WARNING: Wrong inner/outer window combination!: file /builds/worker/checkouts/gecko/dom/base/Document.cpp:7671
[task 2022-09-08T05:22:40.108Z] 05:22:40     INFO - PID 14822 | [Child 14951, Main Thread] WARNING: Wrong inner/outer window combination!: file /builds/worker/checkouts/gecko/dom/base/Document.cpp:7671
[task 2022-09-08T05:22:40.108Z] 05:22:40     INFO - PID 14822 | [Child 14951, Main Thread] WARNING: Wrong inner/outer window combination!: file /builds/worker/checkouts/gecko/dom/base/Document.cpp:7671
[task 2022-09-08T05:22:40.118Z] 05:22:40     INFO - PID 14822 | [Child 14901, Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3359
[task 2022-09-08T05:22:40.120Z] 05:22:40     INFO - PID 14822 | [Child 14901, Main Thread] WARNING: NS_ENSURE_TRUE(InitStaticMembers()) failed: file /builds/worker/workspace/obj-build/dist/include/mozilla/Preferences.h:129
[task 2022-09-08T05:22:40.130Z] 05:22:40     INFO - PID 14822 | [Child 14901, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4604
[task 2022-09-08T05:22:40.137Z] 05:22:40     INFO - PID 13716 | 1662614560136	Marionette	INFO	No differences allowed
[task 2022-09-08T05:22:40.170Z] 05:22:40     INFO - PID 14822 | [Child 14951, Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3359
[task 2022-09-08T05:22:40.175Z] 05:22:40     INFO - PID 14822 | [Child 14951, Main Thread] WARNING: NS_ENSURE_TRUE(InitStaticMembers()) failed: file /builds/worker/workspace/obj-build/dist/include/mozilla/Preferences.h:129
[task 2022-09-08T05:22:40.184Z] 05:22:40     INFO - PID 14822 | [Child 14951, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4604
[task 2022-09-08T05:22:40.233Z] 05:22:40     INFO - TEST-UNEXPECTED-FAIL | /css/css-overflow/webkit-line-clamp-023.html | Testing http://web-platform.test:8000/css/css-overflow/webkit-line-clamp-023.html == http://web-platform.test:8000/css/css-overflow/reference/webkit-line-clamp-023-ref.html
[task 2022-09-08T05:22:40.233Z] 05:22:40     INFO - Found 12 pixels different, maximum difference per channel 255
[task 2022-09-08T05:22:40.233Z] 05:22:40     INFO - REFTEST   IMAGE 1 (TEST): data:image/png;base64,<...>
[task 2022-09-08T05:22:40.234Z] 05:22:40     INFO - REFTEST   IMAGE 2 (REFERENCE): data:image/png;base64,<...>
[task 2022-09-08T05:22:45.629Z] 05:22:45     INFO - PID 15973 | console.warn: SearchSettings: "get: No settings file exists, new profile?" (new NotFoundError("Could not open the file at /tmp/tmptc54fbj6/search.json.mozlz4", (void 0)))
[task 2022-09-08T05:22:45.817Z] 05:22:45     INFO - PID 15973 | [Parent 15973, Main Thread] WARNING: Failed to retarget HTML data delivery to the parser thread.: file /builds/worker/checkouts/gecko/parser/html/nsHtml5StreamParser.cpp:1234
[task 2022-09-08T05:22:45.829Z] 05:22:45     INFO - PID 16023 | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to /tmp/tmp7h0mjjmu/runtests_leaks_1194_tab_pid16264.log
[task 2022-09-08T05:22:45.830Z] 05:22:45     INFO - PID 16023 | [16264, Main Thread] WARNING: XPCOM_MEM_BLOAT_LOG is set, disabling native allocations.: file /builds/worker/checkouts/gecko/tools/profiler/core/platform.cpp:339
[task 2022-09-08T05:22:45.889Z] 05:22:45     INFO - PID 16023 | [Child 16264, Main Thread] WARNING: could not set real-time limit in CubebUtils::InitLibrary: file /builds/worker/checkouts/gecko/dom/media/CubebUtils.cpp:707
[task 2022-09-08T05:22:45.908Z] 05:22:45     INFO - PID 16023 | Couldn't convert chrome URL: chrome://branding/locale/brand.properties
[task 2022-09-08T05:22:45.911Z] 05:22:45     INFO - PID 16023 | [Child 16264, Main Thread] WARNING: Could not get the program name for a cubeb stream.: 'NS_SUCCEEDED(rv)', file /builds/worker/checkouts/gecko/dom/media/CubebUtils.cpp:427
[task 2022-09-08T05:22:46.160Z] 05:22:46     INFO - PID 15973 | [Parent 15973, Main Thread] WARNING: WebProgress Ignored: BrowsingContext is null or discarded: file /builds/worker/checkouts/gecko/dom/ipc/BrowserParent.cpp:3063
[task 2022-09-08T05:22:46.219Z] 05:22:46     INFO - PID 16023 | console.warn: SearchSettings: "get: No settings file exists, new profile?" (new NotFoundError("Could not open the file at /tmp/tmp7h0mjjmu/search.json.mozlz4", (void 0)))
[task 2022-09-08T05:22:46.422Z] 05:22:46     INFO - PID 15973 | [Child 16127, Main Thread] WARNING: '!CanSend() || !mManager || !mManager->CanSend()', file /builds/worker/checkouts/gecko/dom/ipc/jsactor/JSWindowActorChild.cpp:44
[task 2022-09-08T05:22:46.425Z] 05:22:46     INFO - PID 15973 | [Child 16127, Main Thread] WARNING: '!CanSend() || !mManager || !mManager->CanSend()', file /builds/worker/checkouts/gecko/dom/ipc/jsactor/JSWindowActorChild.cpp:44
[task 2022-09-08T05:22:46.481Z] 05:22:46     INFO - PID 15973 | [Child 16127, Main Thread] WARNING: Fallback to FallbackRenderer: file /builds/worker/checkouts/gecko/dom/ipc/BrowserChild.cpp:2823
[task 2022-09-08T05:22:46.494Z] 05:22:46     INFO - PID 16023 | [Parent 16023, Main Thread] WARNING: Failed to retarget HTML data delivery to the parser thread.: file /builds/worker/checkouts/gecko/parser/html/nsHtml5StreamParser.cpp:1234
[task 2022-09-08T05:22:46.830Z] 05:22:46     INFO - PID 16023 | [Child 16179, Main Thread] WARNING: Fallback to FallbackRenderer: file /builds/worker/checkouts/gecko/dom/ipc/BrowserChild.cpp:2823
[task 2022-09-08T05:22:47.253Z] 05:22:47     INFO - PID 16023 | [Child 16179, Main Thread] WARNING: '!CanSend() || !mManager || !mManager->CanSend()', file /builds/worker/checkouts/gecko/dom/ipc/jsactor/JSWindowActorChild.cpp:44
[task 2022-09-08T05:22:47.253Z] 05:22:47     INFO - PID 16023 | [Child 16179, Main Thread] WARNING: '!CanSend() || !mManager || !mManager->CanSend()', file /builds/worker/checkouts/gecko/dom/ipc/jsactor/JSWindowActorChild.cpp:44
[task 2022-09-08T05:22:47.557Z] 05:22:47     INFO - PID 15973 | [Parent 15973, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /builds/worker/checkouts/gecko/dom/base/ThirdPartyUtil.cpp:421
[task 2022-09-08T05:22:47.557Z] 05:22:47     INFO - PID 15973 | [Parent 15973, Main Thread] WARNING: Failed to retarget HTML data delivery to the parser thread.: file /builds/worker/checkouts/gecko/parser/html/nsHtml5StreamParser.cpp:1234
[task 2022-09-08T05:22:47.714Z] 05:22:47     INFO - PID 16023 | [Parent 16023, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /builds/worker/checkouts/gecko/dom/base/ThirdPartyUtil.cpp:421
[task 2022-09-08T05:22:47.714Z] 05:22:47     INFO - PID 16023 | [Parent 16023, Main Thread] WARNING: Failed to retarget HTML data delivery to the parser thread.: file /builds/worker/checkouts/gecko/parser/html/nsHtml5StreamParser.cpp:1234
[task 2022-09-08T05:22:48.206Z] 05:22:48     INFO - TEST-START | /css/css-tables/paint/col-paint-htb-rtl.html

Is this a regression from bug 1786147?

Flags: needinfo?(emilio)

Yes, thanks!

Assignee: nobody → emilio
Severity: S4 → S3
Priority: P5 → P3
Regressed by: 1786147
Attachment #9294631 - Attachment description: WIP: Bug 1789781 - Patch that makes the test reliably fail. → Bug 1789781 - Invalidate block overflow markers when removed properly. r=#layout,dholbert
Flags: needinfo?(emilio)
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/35901 for changes under testing/web-platform/tests
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/0a7a1a5e3216
Invalidate block overflow markers when removed properly. r=dholbert
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: