Bug 1789781 - Invalidate block overflow markers when removed properly. r=dholbert

When we remove the line-clamp ellipsis, we need to invalidate and
potentially remove them.

Differential Revision: https://phabricator.services.mozilla.com/D157323